<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mirpur Premier League</string>
    <string name="team">Team</string>
    <string name="players">Players</string>
    <string name="match_schedule">Match Schedule</string>
    <string name="match_result">Match Result</string>
    <string name="update_news">Update News</string>

    <string name="mirpur_sixers">Mirpur Sixers</string>
    <string name="mirpur_thunder">Mirpur Thunder</string>
    <string name="mirpur_dynamites">Mirpur Dynamites</string>
    <string name="mirpur_super_king">Mirpur Super Kings</string>
    <string name="mirpur_riders">Mirpur Riders</string>
    <string name="mirpur_knight_riders">Mirpur Knight Riders</string>
    <string name="player_url" tools:keep="@string/player_url">http://mirpurpremierleague.website2.me/players</string>

    <!--Sample-->
        <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
        <string name="ad_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
        <string name="add_unit">ca-app-pub-3940256099942544~3347511713</string>

</resources>
