<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height"
                android:layout_margin="@dimen/margin">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/text_background"
                    android:textColor="@color/text_color"
                    android:text="@string/app_name"
                    android:textSize="@dimen/textLarge"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:weightSum="100">
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/color_view2"/>
                    <Button
                        android:id="@+id/team"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/height"
                        android:layout_weight="90"
                        android:text="@string/team"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-thin"
                        android:background="@drawable/textsecondbaackground"
                        android:textColor="@color/text_color"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/color_view2"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:weightSum="100">
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/color_view2"/>
                    <Button
                        android:id="@+id/players"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/height"
                        android:layout_weight="90"
                        android:text="@string/players"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-thin"
                        android:background="@drawable/textsecondbaackground"
                        android:textColor="@color/text_color"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/color_view2"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:weightSum="100">
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/color_view2"/>
                    <Button
                        android:id="@+id/matchSchedule"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/height"
                        android:layout_weight="90"
                        android:text="@string/match_schedule"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-thin"
                        android:background="@drawable/textsecondbaackground"
                        android:textColor="@color/text_color"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/color_view2"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:weightSum="100">
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/color_view2"/>
                    <Button
                        android:id="@+id/matchResult"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/height"
                        android:layout_weight="90"
                        android:text="@string/match_result"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-thin"
                        android:background="@drawable/textsecondbaackground"
                        android:textColor="@color/text_color"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/color_view2"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:weightSum="100">
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/color_view2"/>
                    <Button
                        android:id="@+id/updateNews"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/height"
                        android:layout_weight="90"
                        android:text="@string/update_news"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-thin"
                        android:background="@drawable/textsecondbaackground"
                        android:textColor="@color/text_color"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/color_view2"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit_id" />


</RelativeLayout>