<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TeamActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height"
                android:layout_margin="@dimen/margin">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/textsecondbaackground"
                    android:textColor="@color/text_color"
                    android:text="@string/app_name"
                    android:textSize="@dimen/textLarge"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height"
                android:layout_margin="@dimen/margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/color_view"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="60"
                        android:layout_height="match_parent"
                        android:text="@string/mirpur_sixers"
                        android:textSize="22sp"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-thin"
                        android:background="@drawable/text_background"
                        android:textColor="@color/text_color"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/color_view"/>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="30"
                        android:src="@mipmap/ic_launcher"
                        android:contentDescription="@null" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height"
                android:layout_margin="@dimen/margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/color_view"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="60"
                        android:layout_height="match_parent"
                        android:text="@string/mirpur_thunder"
                        android:textSize="22sp"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-thin"
                        android:background="@drawable/text_background"
                        android:textColor="@color/text_color"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/color_view"/>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="30"
                        android:src="@mipmap/ic_launcher"
                        android:contentDescription="@null" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height"
                android:layout_margin="@dimen/margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/color_view"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="60"
                        android:layout_height="match_parent"
                        android:text="@string/mirpur_dynamites"
                        android:textSize="22sp"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-thin"
                        android:background="@drawable/text_background"
                        android:textColor="@color/text_color"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/color_view"/>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="30"
                        android:src="@mipmap/ic_launcher"
                        android:contentDescription="@null" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height"
                android:layout_margin="@dimen/margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/color_view"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="60"
                        android:layout_height="match_parent"
                        android:text="@string/mirpur_super_king"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-thin"
                        android:textAllCaps="false"
                        android:background="@drawable/text_background"
                        android:textColor="@color/text_color"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/color_view"/>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="30"
                        android:src="@mipmap/ic_launcher"
                        android:contentDescription="@null" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height"
                android:layout_margin="@dimen/margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/color_view"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="60"
                        android:layout_height="match_parent"
                        android:text="@string/mirpur_riders"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:fontFamily="sans-serif-thin"
                        android:background="@drawable/text_background"
                        android:textColor="@color/text_color"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/color_view"/>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="30"
                        android:src="@mipmap/ic_launcher"
                        android:contentDescription="@null" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/height"
                android:layout_margin="@dimen/margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100">
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/color_view"/>
                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="60"
                        android:layout_height="match_parent"
                        android:text="@string/mirpur_knight_riders"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        android:textAllCaps="false"
                        android:fontFamily="sans-serif-thin"
                        android:background="@drawable/text_background"
                        android:textColor="@color/text_color"/>
                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/color_view"/>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="30"
                        android:src="@mipmap/ic_launcher"
                        android:contentDescription="@null" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit_id" />
</RelativeLayout>